# backend/internal/models/track_model.go
@@ -22,6 +22,16 @@ type Track struct {
 type TrackDetails struct {
 	Track
 	Album     *Album
+	Genres    []*Genre
 	PlayCount int
 	Duration  int
+}
+
+// TrackUploadMetadata содержит метаданные для загрузки трека
+type TrackUploadMetadata struct {
+	Title      string    `json:"title"`
+	AlbumID    uuid.UUID `json:"album_id,omitempty"`
+	ArtistName string    `json:"artist_name"`
+	Duration   int       `json:"duration,omitempty"`
+	CoverURL   string    `json:"cover_url,omitempty"`
 }
